# raifhack

./: .gitignore  README.md  log_data.py  read_data.py
eden/: README.md  pipeline.py  predict.py  preprocess.py  pyproject.toml  train.py
eden/data/: README.md
eden/logs/: README.md
eden/model/: baseline.py
eden/model/batya/: entrypoint.py  model.py
eden/model/correction/: better_corr.py  model.py
eden/model/raif_hack/: features.py  model.py  settings.py
eden/model/xgboosting/: entrypoint.py  model.py
eden/preprocessing/: common.py
eden/saved_models/: README.md
eden/submissions/: README.md
model/: pyproject.toml
