[tool.poetry]
name = "Raiffeisen commercial hackathon"
version = "0.0.1"
description = "Fencepainters solution"
authors = ["Fencepainters"]


[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"

# standard includes websockets
scikit-learn = "^0.24.2"
pandas = "^1.1.5"
numpy = "^1.19.5"
lightgbm = "^3.2.0"
xgboost = "^1.4.2"
wandb = "^0.12.2"
jupyter = "^1.0.0"
pyrosm = "^0.6.0"
hdbscan = "^0.8.27"
matplotlib = "^3.4.3"
catboost = "^0.26.1"
plotly = "^5.3.1"


[tool.poetry.dev-dependencies]
tqdm = "^4.62.3"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"